# pmt

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0001_create_projects_table.py  b0504ade70d4_create_projects_table.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  engine.py  prompts.py  schemas.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  constants.py  dependencies.py  event_bus.py  events.py  exceptions.py  permissions.py  schemas.py  security.py
backend/app/db/: __init__.py  base.py  base_class.py  base_repository.py  mixins.py  session.py
backend/app/domains/: __init__.py
backend/app/middleware/: __init__.py  logging.py  rate_limiter.py  request_id.py
backend/app/models/: __init__.py  activity_log.py  associations.py  attachment.py  comment.py  mixins.py  notification.py  project.py  scorecard.py  sprint.py  task.py  user.py
backend/app/repositories/: __init__.py  activity_log_repository.py  base.py  comment_repository.py  notification_repository.py  project_repository.py  scorecard_repository.py  sprint_repository.py  task_repository.py  user_repository.py
backend/app/schemas/: __init__.py  analytics.py  attachment.py  auth.py  comment.py  common.py  notification.py  project.py  scorecard.py  sprint.py  task.py  (+1 more)
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: __init__.py  conftest.py  factories.py
(+305 files in other folders)
